feat: 체형 정보 조회 #113
