# src/domains/profile/profile.controller.js
@@ -1,6 +1,6 @@
 import { response } from "../../config/response.js";
 import { status } from "../../config/response.status.js";
-import { getInfo, getMyFit, getWish } from "./profile.provider.js";
+import { getInfo, getMyFit, getWish, getBodyInfo } from "./profile.provider.js";
 import {  } from "./profile.service.js";
 
 export const info = async (req, res, next) => {
@@ -19,4 +19,10 @@ export const wish = async (req, res, next) => {
     console.log("내가 관심있는 옷을 조회합니다");
     const userId = res.locals.uuid;
     res.send(response(status.SUCCESS, await getWish(userId, req.query)));
+}
+
+export const bodyInfo = async (req, res, next) => {
+    console.log("내 체형정보를 조회합니다");
+    const userId = res.locals.uuid;
+    res.send(response(status.SUCCESS, await getBodyInfo(userId)));
 }
