# src/domains/profile/profile.provider.js
@@ -1,5 +1,5 @@
-import { getInfoDTO, getMyFitDTO, getWishDTO } from "./profile.dto.js"
-import { getUserDAO, getFitDAO, getStyleDAO, getFollowDAO, getMyFitDAO, getWishDAO } from "./profile.dao.js";
+import { getInfoDTO, getMyFitDTO, getWishDTO, getBodyInfoDTO } from "./profile.dto.js"
+import { getUserDAO, getFitDAO, getStyleDAO, getFollowDAO, getMyFitDAO, getWishDAO, getBodyInfoDAO } from "./profile.dao.js";
 
 export const getInfo = async (userId) => {
     return getInfoDTO(await getUserDAO(userId), await getFitDAO(userId), await getStyleDAO(userId), await getFollowDAO(userId));
@@ -13,4 +13,8 @@ export const getMyFit = async (userId, query) => {
 export const getWish = async (userId, query) => {
     const { category } = query;
     return getWishDTO(await getWishDAO(userId, category));
+}
+
+export const getBodyInfo = async (userId) => {
+    return getBodyInfoDTO(await getBodyInfoDAO(userId));
 }
